--- a/index.njk
+++ b/index.njk
@@ -1,19 +1,20 @@
 ---
 layout: layout-nonav.njk
 title: NYS Digital Services
+data:
 ---
 {% from './_includes/_components.njk' import hero,categorytiles,card,bio,textarea,highlight,iconframe,quicklinks,feedback  %}
 
 {{
     hero({
-        title:"NYS Digital Services Utilities",
-        date: "",
-        image:"plaza-lights2.jpg",
-        description:"A simple, functional, and portable set of components for your NYS website or application. ", 
+        title:"OGS.ny.gov Accessibility and Performance Audit",
+        date: "September 2025",
+        image:"",
+        description:" ", 
         buttons: [
         {
-            text:"View the Component Index",
-            link:"/components",
+            text:"See the Performance Reports",
+            link:"/audits/ogs/performance",
             arialabel:""
         }
         ]
