add dataCard and data structure

--- a/_includes/_components.njk
+++ b/_includes/_components.njk
@@ -88,3 +88,6 @@
 {% macro dataTable(params) %}
   {%- include "./dataTable/_template.njk" -%}
 {% endmacro %}
+{% macro dataCard(params) %}
+  {%- include "./dataCard/_template.njk" -%}
+{% endmacro %}
