--- a/index.njk
+++ b/index.njk
@@ -1,9 +1,9 @@
 ---
-layout: layout-nonav.njk
+layout: layout.njk
 title: NYS Digital Services
 data:
 ---
-{% from './_includes/_components.njk' import hero,categorytiles,card,bio,textarea,highlight,iconframe,quicklinks,feedback  %}
+{% from './_includes/_components.njk' import hero,categorytiles,card,bio,textarea,highlight,iconframe,quicklinks,feedback, dataCard  %}
 
 {{
     hero({
@@ -20,4 +20,6 @@ data:
         ]
     })
 }}
+
+
   
