temporarily disable passthrough copy

--- a/audits/ogs/performance.njk
+++ b/audits/ogs/performance.njk
@@ -12,6 +12,7 @@ data: ogs.performance
 {{
     dataCard({
         title:"performance data",
+        type:"performance",
         dataSource: ogs.performance
     })
 }}
