--- a/_includes/dataCard/_template.njk
+++ b/_includes/dataCard/_template.njk
@@ -1,13 +1,25 @@
 {% set cardData = params.dataSource %}
-<section class="">
-    <h2 class="">{{params.title}} </h2>
-    {% for data in cardData %}
-        <div class="flex border border-ny-blue m-4 p-4 w-2/3">
-            <h2 class="text-xl">{{data.page}}</h2>
-        </div>
+{% if params.type === "performance" %}
+    <section class="">
+        <h2 class="">{{params.title}} </h2>
+        {% for data in cardData %}
+            <div class="flex border border-ny-blue m-4 p-4 w-2/3 rounded-lg bg-blue-100">
+                <h2 class="text-xl">{{data.page}}</h2>
+            </div>
 
 
-    {% endfor %}
+        {% endfor %}
 
 
-</section>
+    </section>
+
+
+
+
+
+
+{% elif params.type === "a11y" %}
+
+
+
+{% endif %}
