--- a/_includes/dataCard/_template.njk
+++ b/_includes/dataCard/_template.njk
@@ -3,8 +3,15 @@
     <section class="">
         <h2 class="">{{params.title}} </h2>
         {% for data in cardData %}
-            <div class="flex border border-ny-blue m-4 p-4 w-2/3 rounded-lg bg-blue-100">
-                <h2 class="text-xl">{{data.page}}</h2>
+            <div class="flex flex-col border border-ny-blue m-4 p-4 w-2/3 rounded-lg bg-blue-100">
+                
+                <h2 class="text-2xl">{{data.page}}</h2>
+                <h3 class="text-xl"> Lighthouse Reports </h3>
+                <ul class="">
+                    <li></li>
+                    <li></li>
+                </ul>
+            
             </div>
 
 
