update performance template

--- a/_includes/dataCard/_template.njk
+++ b/_includes/dataCard/_template.njk
@@ -1,15 +1,22 @@
-{% set cardData = params.dataSource %}
+{% set cardData = params.dataSource %} {# set the card data source from the page #}
+
 {% if params.type === "performance" %}
-    <section class="">
+
+    <section class="items-center flex flex-col">
         <h2 class="">{{params.title}} </h2>
+
         {% for data in cardData %}
-            <div class="flex flex-col border border-ny-blue m-4 p-4 w-2/3 rounded-lg bg-blue-100">
+            <div class="flex flex-col m-4 p-4 w-2/3 border border-solid border-primary-core-blue rounded-lg bg-light-gray">
                 
                 <h2 class="text-2xl">{{data.page}}</h2>
                 <h3 class="text-xl"> Lighthouse Reports </h3>
-                <ul class="">
-                    <li></li>
-                    <li></li>
+                <ul class="mx-8">
+                    <li>
+                        <a class="text-link-blue hover:decoration-[3px] focus:decoration-[3px]" href="/reports/{{data.mobilelink}}">Mobile Report <span class="sr-only">for {{data.page}}</span></a>
+                    </li>
+                    <li>
+                        <a href="/reports/{{data.desktoplink}}">Desktop Report <span class="sr-only">for {{data.page}}</span></a>
+                    </li>
                 </ul>
             
             </div>
