--- a/_layouts/layout.njk
+++ b/_layouts/layout.njk
@@ -23,12 +23,12 @@
     {% include '_js-link.njk' %}
     <title>{{ title }}</title>
   </head>
-  <body class="nysds-normalize">
+  <body class="">
   <a href="#main-site-content-for-skiplink" class="sr-only focus:not-sr-only text-blue-700 underline">Skip to Main Content</a>
     {# {% from '../_includes/_components.njk' import unav,nav,footer  %} #}
     {# {% include 'unav-data.njk' %}
      {% include 'nav-data.njk' %} #}
-    <main class="mx-8 md:mx-20" id="main-site-content-for-skiplink">
+    <main class="" id="main-site-content-for-skiplink">
     {{ content | safe }}
     </main>
     {# {% include 'footer-data.njk' %} #}
