--- a/index.njk
+++ b/index.njk
@@ -5,21 +5,7 @@ data:
 ---
 {% from './_includes/_components.njk' import hero,categorytiles,card,bio,textarea,highlight,iconframe,quicklinks,feedback, dataCard  %}
 
-{{
-    hero({
-        title:"OGS.ny.gov Accessibility and Performance Audit",
-        date: "September 2025",
-        image:"",
-        description:" ", 
-        buttons: [
-        {
-            text:"See the Performance Reports",
-            link:"/audits/ogs/performance",
-            arialabel:""
-        }
-        ]
-    })
-}}
+Nothing here
 
 
   
