--- a/_includes/dataCard/_template.njk
+++ b/_includes/dataCard/_template.njk
@@ -18,7 +18,9 @@
                         <a href="/reports/{{data.desktoplink}}">Desktop Report <span class="sr-only">for {{data.page}}</span></a>
                     </li>
                 </ul>
-            
+                <div>
+                    <span class="text-2xl bold text-primary-core-blue">{{data.mobilescore}}</span>
+                </div>
             </div>
 
 
