--- a/index.njk
+++ b/index.njk
@@ -6,6 +6,12 @@ data:
 {% from './_includes/_components.njk' import hero,categorytiles,card,bio,textarea,highlight,iconframe,quicklinks,feedback, dataCard  %}
 
 Nothing here
+<style>
 
+.test {
+  height: 10dvh;
+  border: red solid;
+}
+    </style>
 
-  
+<div class="test"></div>
