add automated card data

--- a/index.njk
+++ b/index.njk
@@ -5,13 +5,9 @@ data:
 ---
 {% from './_includes/_components.njk' import hero,categorytiles,card,bio,textarea,highlight,iconframe,quicklinks,feedback, dataCard  %}
 
-Nothing here
-<style>
-
-.test {
-  height: 10dvh;
-  border: red solid;
-}
-    </style>
-
-<div class="test"></div>
+Audits
+<ul>
+  <li><a href="/audits/ogs/accessibility-automated/" >Accessibility Automated Audit</a></li>
+  <li><a href="/audits/ogs/accessibility-manual/" >Accessibility Manual Audit</a></li>
+  <li><a href="/audits/ogs/performance/" >Performance Automated Audit</a></li>
+</ul>
