--- a/audits/ogs/accessibility-automated.njk
+++ b/audits/ogs/accessibility-automated.njk
@@ -13,7 +13,7 @@ data: ogs.a11yAutomated
 {{
     dataCard({
         title:"Automated Reports",
-        type:"a11y",
+        type:"a11y-lighthouse",
         dataSource: ogs.a11yAutomated
     })
 }}
