setup new test scripts

--- a/_includes/_components.njk
+++ b/_includes/_components.njk
@@ -91,3 +91,6 @@
 {% macro dataCard(params) %}
   {%- include "./dataCard/_template.njk" -%}
 {% endmacro %}
+{% macro batch(params) %}
+  {%- include "./batch/_template.njk" -%}
+{% endmacro %}
