update test runners and create batch component

--- a/_includes/batch/_template.njk
+++ b/_includes/batch/_template.njk
@@ -1,7 +1,7 @@
 {% for link in params.url %}
 
     {% if link.type == 'lighthouse' %}
-        
+        npm run lighthouse-mobile-performance {{link.link}} && npm run lighthouse-desktop-performance {{link.link}}
     {% endif %}
 
 {% endfor %}
