--- a/batch-create.njk
+++ b/batch-create.njk
@@ -5,3 +5,69 @@ data:
 ---
 {% from './_includes/_components.njk' import batch  %}
 
+{{
+    batch({
+        url: [
+            {
+                link:"https://ny.gov",
+                type:"lighthouse"
+            },
+            {
+                link:"https://www.governor.ny.gov",
+                type:"lighthouse"
+            },
+            {
+                link:"https://www.governor.ny.gov/news",
+                type:"lighthouse"
+            },
+            {
+                link:"https://www.ny.gov/services",
+                type:"lighthouse"
+            },
+            {
+                link:"https://www.ny.gov/all-services",
+                type:"lighthouse"
+            },
+            {
+                link:"https://www.governor.ny.gov/programs/get-offline-get-outside",
+                type:"lighthouse"
+            },
+            {
+                link:"https://www.governor.ny.gov/programs/eliminating-distractions-new-york-schools",
+                type:"lighthouse"
+            },
+            {
+                link:"https://www.ny.gov/programs/new-york-experience-nyx",
+                type:"lighthouse"
+            },
+            {
+                link:"https://www.governor.ny.gov/executive-order/no-51-appointing-special-prosecutor-investigate-and-if-warranted-prosecute-matters",
+                type:"lighthouse"
+            },
+            {
+                link:"https://www.governor.ny.gov/news/money-your-pockets-governor-hochul-proposes-sending-86-million-new-yorkers-inflation-refund",
+                type:"lighthouse"
+            },
+            {
+                link:"https://www.ny.gov/services/apply-professional-license",
+                type:"lighthouse"
+            }
+            ,
+            {
+                link:"https://www.governor.ny.gov/governor-hochuls-past-schedule",
+                type:"lighthouse"
+            }
+            ,
+            {
+                link:"https://www.ny.gov/nysdot-employment-opportunities/highway-maintenance-worker-series",
+                type:"lighthouse"
+            }
+            ,
+            {
+                link:"https://www.governor.ny.gov/schedule/governor-hochul-clinton-and-rockland-counties",
+                type:"lighthouse"
+            }
+            
+        ]   
+    })
+}}
