--- a/batch-create.njk
+++ b/batch-create.njk
@@ -9,62 +9,62 @@ data:
     batch({
         url: [
             {
-                link:"https://ny.gov",
+                link:"ny.gov",
                 type:"lighthouse"
             },
             {
-                link:"https://www.governor.ny.gov",
+                link:"www.governor.ny.gov",
                 type:"lighthouse"
             },
             {
-                link:"https://www.governor.ny.gov/news",
+                link:"www.governor.ny.gov/news",
                 type:"lighthouse"
             },
             {
-                link:"https://www.ny.gov/services",
+                link:"www.ny.gov/services",
                 type:"lighthouse"
             },
             {
-                link:"https://www.ny.gov/all-services",
+                link:"www.ny.gov/all-services",
                 type:"lighthouse"
             },
             {
-                link:"https://www.governor.ny.gov/programs/get-offline-get-outside",
+                link:"www.governor.ny.gov/programs/get-offline-get-outside",
                 type:"lighthouse"
             },
             {
-                link:"https://www.governor.ny.gov/programs/eliminating-distractions-new-york-schools",
+                link:"www.governor.ny.gov/programs/eliminating-distractions-new-york-schools",
                 type:"lighthouse"
             },
             {
-                link:"https://www.ny.gov/programs/new-york-experience-nyx",
+                link:"www.ny.gov/programs/new-york-experience-nyx",
                 type:"lighthouse"
             },
             {
-                link:"https://www.governor.ny.gov/executive-order/no-51-appointing-special-prosecutor-investigate-and-if-warranted-prosecute-matters",
+                link:"www.governor.ny.gov/executive-order/no-51-appointing-special-prosecutor-investigate-and-if-warranted-prosecute-matters",
                 type:"lighthouse"
             },
             {
-                link:"https://www.governor.ny.gov/news/money-your-pockets-governor-hochul-proposes-sending-86-million-new-yorkers-inflation-refund",
+                link:"www.governor.ny.gov/news/money-your-pockets-governor-hochul-proposes-sending-86-million-new-yorkers-inflation-refund",
                 type:"lighthouse"
             },
             {
-                link:"https://www.ny.gov/services/apply-professional-license",
+                link:"www.ny.gov/services/apply-professional-license",
                 type:"lighthouse"
             }
             ,
             {
-                link:"https://www.governor.ny.gov/governor-hochuls-past-schedule",
+                link:"www.governor.ny.gov/governor-hochuls-past-schedule",
                 type:"lighthouse"
             }
             ,
             {
-                link:"https://www.ny.gov/nysdot-employment-opportunities/highway-maintenance-worker-series",
+                link:"www.ny.gov/nysdot-employment-opportunities/highway-maintenance-worker-series",
                 type:"lighthouse"
             }
             ,
             {
-                link:"https://www.governor.ny.gov/schedule/governor-hochul-clinton-and-rockland-counties",
+                link:"www.governor.ny.gov/schedule/governor-hochul-clinton-and-rockland-counties",
                 type:"lighthouse"
             }
             
