--- a/_includes/batch/_template.njk
+++ b/_includes/batch/_template.njk
@@ -1,10 +1,35 @@
-{% for link in params.url %}
 
-    {% if link.type == 'lighthouse' %}
+
+    {% if params.test == 'lighthouse' %}
+        {% for link in params.url %}
         npx lighthouse --only-categories performance --output-path={% filter replace(".", "") %}{% filter replace("/", "") %}{{link.link}}{% endfilter %}{% endfilter %}MOBILE.html -- https://{{link.link}} 
         
         
        npx lighthouse --preset=desktop  --throttling.throughputKbps=1650 --throttling.rttMs=150  --only-categories performance --output-path={% filter replace(".", "") %}{% filter replace("/", "") %}{{link.link}}{% endfilter %}{% endfilter %}DESKTOP.html -- https://{{link.link}}
+       {% endfor %}
     {% endif %}
 
-{% endfor %}
+
+    {% if params.test == 'a11y' %}
+        {% for link in params.url %}
+            
+            {
+            "url": "https://{{link.link}}?mobile",
+            "viewport": {
+                "width": 360,
+                "height": 480
+            }
+            },
+            {
+            "url": "hhtps://{{link.link}}/?desktop",
+            "viewport": {
+                "width": 1280,
+                "height": 1024
+            }
+            },
+           
+         {% endfor %}
+    {% endif %}
+
+
+
