--- a/batch-create.njk
+++ b/batch-create.njk
@@ -7,65 +7,52 @@ data:
 
 {{
     batch({
+        test: "a11y",
         url: [
             {
-                link:"ny.gov",
-                type:"lighthouse"
+                link:"ny.gov"
             },
             {
-                link:"www.governor.ny.gov",
-                type:"lighthouse"
+                link:"www.governor.ny.gov"
             },
             {
-                link:"www.governor.ny.gov/news",
-                type:"lighthouse"
+                link:"www.governor.ny.gov/news"
             },
             {
-                link:"www.ny.gov/services",
-                type:"lighthouse"
+                link:"www.ny.gov/services"
             },
             {
-                link:"www.ny.gov/all-services",
-                type:"lighthouse"
+                link:"www.ny.gov/all-services"
             },
             {
-                link:"www.governor.ny.gov/programs/get-offline-get-outside",
-                type:"lighthouse"
+                link:"www.governor.ny.gov/programs/get-offline-get-outside"
             },
             {
-                link:"www.governor.ny.gov/programs/eliminating-distractions-new-york-schools",
-                type:"lighthouse"
+                link:"www.governor.ny.gov/programs/eliminating-distractions-new-york-schools"
             },
             {
-                link:"www.ny.gov/programs/new-york-experience-nyx",
-                type:"lighthouse"
+                link:"www.ny.gov/programs/new-york-experience-nyx"
             },
             {
-                link:"www.governor.ny.gov/executive-order/no-51-appointing-special-prosecutor-investigate-and-if-warranted-prosecute-matters",
-                type:"lighthouse"
+                link:"www.governor.ny.gov/executive-order/no-51-appointing-special-prosecutor-investigate-and-if-warranted-prosecute-matters"
             },
             {
-                link:"www.governor.ny.gov/news/money-your-pockets-governor-hochul-proposes-sending-86-million-new-yorkers-inflation-refund",
-                type:"lighthouse"
+                link:"www.governor.ny.gov/news/money-your-pockets-governor-hochul-proposes-sending-86-million-new-yorkers-inflation-refund"
             },
             {
-                link:"www.ny.gov/services/apply-professional-license",
-                type:"lighthouse"
+                link:"www.ny.gov/services/apply-professional-license"
             }
             ,
             {
-                link:"www.governor.ny.gov/governor-hochuls-past-schedule",
-                type:"lighthouse"
+                link:"www.governor.ny.gov/governor-hochuls-past-schedule"
             }
             ,
             {
-                link:"www.ny.gov/nysdot-employment-opportunities/highway-maintenance-worker-series",
-                type:"lighthouse"
+                link:"www.ny.gov/nysdot-employment-opportunities/highway-maintenance-worker-series"
             }
             ,
             {
-                link:"www.governor.ny.gov/schedule/governor-hochul-clinton-and-rockland-counties",
-                type:"lighthouse"
+                link:"www.governor.ny.gov/schedule/governor-hochul-clinton-and-rockland-counties"
             }
             
         ]   
