--- a/_includes/batch/_template.njk
+++ b/_includes/batch/_template.njk
@@ -21,7 +21,7 @@
             }
             },
             {
-            "url": "hhtps://{{link.link}}/?desktop",
+            "url": "https://{{link.link}}/?desktop",
             "viewport": {
                 "width": 1280,
                 "height": 1024
