--- a/_includes/dataCard/_template.njk
+++ b/_includes/dataCard/_template.njk
@@ -14,13 +14,13 @@
 
                     <div class="w-1/2">
                         <h3 class="text-xl mb-1"> Lighthouse Performance Reports </h3>
-                        <p class="text-sm m-0"> <em>for {{data.url}} </em></p>
+                        <p class="text-sm m-0"> <em>for {{data.pages}} </em></p>
                         <ul class="mx-8">
                             <li class="my-2">
-                                <a class="text-link-blue hover:decoration-[3px] focus:decoration-[3px]" href="/reports/{{data.mobilelink}}">Mobile Report <span class="sr-only">for {{data.page}}</span></a>
+                                <a class="text-link-blue hover:decoration-[3px] focus:decoration-[3px]" href="/reports/{{data.mobile.link}}">Mobile Report <span class="sr-only">for {{mobile.title}}</span></a>
                             </li>
                             <li>
-                                <a href="/reports/{{data.desktoplink}}">Desktop Report <span class="sr-only">for {{data.page}}</span></a>
+                                <a href="/reports/{{data.desktop.link}}">Desktop Report <span class="sr-only">for {{data.page}}</span></a>
                             </li>
                         </ul>
                     </div>
@@ -51,13 +51,13 @@
                             <span 
                                 class="
                                     text-4xl font-medium 
-                                    {% if data.desktopscore >= 89 %} text-success-green {% endif %}
-                                    {% if data.desktopscore >= 50 and data.desktopscore <= 88 %} text-warning-orange {% endif %}
-                                    {% if data.desktopscore >= 0 and data.desktopscore <= 49 %} text-dark-red-alert {% endif %}
+                                    {% if data.desktop.performance_score >= 89 %} text-success-green {% endif %}
+                                    {% if data.desktop.performance_score >= 50 and data.desktop.performance_score <= 88 %} text-warning-orange {% endif %}
+                                    {% if data.desktop.performance_score >= 0 and data.desktop.performance_score <= 49 %} text-dark-red-alert {% endif %}
                                     "
                             >
 
-                            {{data.desktopscore}} 
+                            {{data.desktop.performance_score}} 
                             
                             <span class="text-lg"> / 100 </span>
                             
