--- a/_includes/dataCard/_template.njk
+++ b/_includes/dataCard/_template.njk
@@ -99,16 +99,15 @@
                     </div>
 
                 </div>
-
                 {# Mobile Metric Section #}
                 <div class="mt-6">
                     <h4 class="text-lg font-bold mb-3">Mobile Metrics</h4>
-                    <p>Click on a metric for more information.</p>
+                    <p>Click on a metric button for additional details.</p>
 
-                    <div class="flex flex-wrap flex-col grid-cols-1 md:grid-cols-2 justify-items-center gap-4">
+                    <div class="flex flex-wrap flex-col grid-cols-1 lg:grid-cols-2 justify-items-center gap-4">
 
                         {# First Contentful Paint #}
-                        <div x-data="{ fcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg- cursor-pointer">
+                        <div x-data="{ fcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
                         <button
             class="flex flex-col grid-cols-1 items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-red-600"
             @click="fcp = !fcp"
@@ -138,14 +137,12 @@
                         
 
                         {# Largest Contentful Paint #}
-                        <div
-            x-data="{ open: false }"
-            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
-            @click="open = !open"
-            @keydown.enter.prevent="open = !open"
-            @keydown.space.prevent="open = !open"
-            tabindex="0"
-            role="button"
+                        <div x-data="{ lcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <button
+            class="flex flex-col grid-cols-1 items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-red-600"
+            @click="lcp = !lcp"
+            @click.outside="lcp = false"
+            :aria-expanded="lcp"
         >
                             <span class="text-xs font-medium text-gray-600 uppercase mb-1">
                 Largest Contentful Paint
@@ -155,54 +152,49 @@
                                 {{ data.mobile.metrics.largest_contentful_paint }}
                                 <span class="text-sm ml-1">s</span>
                             </span>
-
+                            </button>
                             <div
-                x-show="open"
+                x-show="lcp"
                 x-transition
                 x-cloak
                 class="mt-2 text-xs text-gray-600 text-center"
+                @click.outside="lcp = false"
             >
                 How long it takes for the largest visible element to load.
             </div>
                         </div>
                         {# Total Blocking Time #}
-                        <div
-            x-data="{ open: false }"
+                        <div x-data="{ tbt: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <button
             class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
-            @click="open = !open"
-            @keydown.enter.prevent="open = !open"
-            @keydown.space.prevent="open = !open"
-            tabindex="0"
-            role="button"
+            @click="tbt = !tbt"
+            :aria-expanded="tbt"
         >
                             <span class="text-xs font-medium text-gray-600 uppercase mb-1">
                 Total Blocking Time
             </span>
-
                             <span class="text-2xl font-bold">
                                 {{ data.mobile.metrics.total_blocking_time }}
                                 <span class="text-sm ml-1">ms</span>
                             </span>
-
+                            </button>
                             <div
-                x-show="open"
+                x-show="tbt"
                 x-transition
                 x-cloak
                 class="mt-2 text-xs text-gray-600 text-center"
+                @click.outside="tbt = false"
             >
                 How long it takes for the largest visible element to load.
             </div>
                         </div>
                         {# Cumulative Layout Shift #}
-                        <div
-            x-data="{ open: false }"
+                        <div x-data="{ cls: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <button
             class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
-            @click="open = !open"
-            @keydown.enter.prevent="open = !open"
-            @keydown.space.prevent="open = !open"
-            tabindex="0"
-            role="button"
-            aria-expanded="open"
+            @click="cls = !cls"
+            @click.outside="cls = false"
+            :aria-expanded="cls"
         >
                             <span class="text-xs font-medium text-gray-600 uppercase mb-1">
                 Cumulative Layout Shift
@@ -212,9 +204,9 @@
                                 {{ data.mobile.metrics.cumulative_layout_shift }}
                                 <span class="text-sm ml-1">s</span>
                             </span>
-
+                            </button>
                             <div
-                x-show="open"
+                x-show="cls"
                 x-transition
                 x-cloak
                 class="mt-2 text-xs text-gray-600 text-center"
@@ -223,15 +215,11 @@
             </div>
                         </div>
                         {# Speed Index #}
-                        <div
-                x-data="{ open: false }"
+                        <div x-data="{ si: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <button
                 class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
-                @click="open = !open"
-                @keydown.enter.prevent="open = !open"
-                @keydown.space.prevent="open = !open"
-                tabindex="0"
-                role="button"
-                aria-expanded="open"
+                @click="si = !si"
+                :aria-expanded="si"
             >
                             <span class="text-xs font-medium text-gray-600 uppercase mb-1">
                     Speed Index
@@ -241,12 +229,13 @@
                                 {{ data.mobile.metrics.speed_index }}
                                 <span class="text-sm ml-1">s</span>
                             </span>
-
+                            </button>
                             <div
-                    x-show="open"
+                    x-show="si"
                     x-transition
                     x-cloak
                     class="mt-2 text-xs text-gray-600 text-center"
+                    @click.outside="si = false"
                 >
                     How quickly the contents of a page are visibly populated.
                 </div>
@@ -263,15 +252,12 @@
                     <div class="flex flex-wrap flex-col grid-cols-2 md:grid-cols-2 justify-center gap-4">
 
                         {# First Contentful Paint #}
-                        <div
-            x-data="{ open: false }"
+                        <div x-data="{ fcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue  bg-white cursor-pointer">
+                        <button
             class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
-            @click="open = !open"
-            @keydown.enter.prevent="open = !open"
-            @keydown.space.prevent="open = !open"
-            role="button"
-            tabindex="0"
-            :aria-expanded="open"
+            @click="fcp = !fcp"
+            @click.outside="fcp = false"
+            :aria-expanded="fcp"
         >
                             <span class="text-xs font-medium text-gray-600 uppercase mb-1">
                 First Contentful Paint
@@ -281,27 +267,25 @@
                                 {{ data.desktop.metrics.first_contentful_paint }}
                                 <span class="text-sm ml-1">s</span>
                             </span>
-
+                            </button>
                             <div
-                x-show="open"
+                x-show="fcp"
                 x-transition
                 x-cloak
                 class="mt-2 text-xs text-gray-600 text-center"
+                @click.outside="fcp = false"
             >
                 Time until the first piece of content is rendered on screen.
             </div>
                         </div>
 
                         {# Largest Contentful Paint #}
-                        <div
-            x-data="{ open: false }"
+                        <div x-data="{ lcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <button
             class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
-            @click="open = !open"
-            @keydown.enter.prevent="open = !open"
-            @keydown.space.prevent="open = !open"
-            tabindex="0"
-            role="button"
-            :aria-expanded="open"
+            @click="lcp = !lcp"
+            @click.outside="lcp = false"
+            :aria-expanded="lcp"
         >
                             <span class="text-xs font-medium text-gray-600 uppercase mb-1">
                 Largest Contentful Paint
@@ -311,26 +295,23 @@
                                 {{ data.desktop.metrics.largest_contentful_paint }}
                                 <span class="text-sm ml-1">s</span>
                             </span>
-
+                            </button>
                             <div
-                x-show="open"
+                x-show="lcp"
                 x-transition
                 x-cloak
                 class="mt-2 text-xs text-gray-600 text-center"
+                @click.outside="lcp = false"
             >
                 How long it takes for the largest visible element to load.
             </div>
                         </div>
                         {# Total Blocking Time #}
-                        <div
-            x-data="{ open: false }"
+                        <div x-data="{ tbt: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <button
             class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
-            @click="open = !open"
-            @keydown.enter.prevent="open = !open"
-            @keydown.space.prevent="open = !open"
-            tabindex="0"
-            role="button"
-            aria-expanded="open"
+            @click="tbt = !tbt"
+            :aria-expanded="tbt"
         >
                             <span class="text-xs font-medium text-gray-600 uppercase mb-1">
                 Total Blocking Time
@@ -340,26 +321,24 @@
                                 {{ data.desktop.metrics.total_blocking_time }}
                                 <span class="text-sm ml-1">ms</span>
                             </span>
-
+                            </button>
                             <div
-                x-show="open"
+                x-show="tbt"
                 x-transition
                 x-cloak
                 class="mt-2 text-xs text-gray-600 text-center"
+                @click.outside="tbt = false"
             >
                 How long it takes for the largest visible element to load.
             </div>
                         </div>
                         {# Cumulative Layout Shift #}
-                        <div 
-            x-data="{ open: false }"
+                        <div x-data="{ cls: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <button
             class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
-            @click="open = !open"
-            @keydown.enter.prevent="open = !open"
-            @keydown.space.prevent="open = !open"
-            tabindex="0"
-            role="button"
-            aria-expanded="open">
+            @click="cls = !cls"
+            @click.outside="cls = false"
+            :aria-expanded="cls">
                             <span class="text-xs font-medium text-gray-600 uppercase mb-1">
                 Cumulative Layout Shift
             </span>
@@ -368,26 +347,24 @@
                                 {{ data.desktop.metrics.cumulative_layout_shift }}
                                 <span class="text-sm ml-1">s</span>
                             </span>
-
+                            </button>
                             <div
-                x-show="open"
+                x-show="cls "
                 x-transition
                 x-cloak
                 class="mt-2 text-xs text-gray-600 text-center"
+                @click="cls = false"
             >
                 How much the page layout shifts during loading.
             </div>
                         </div>
                         {# Speed Index #}
-                        <div
-                x-data="{ open: false }"
+                        <div x-data="{ si: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <button
                 class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
-                @click="open = !open"
-                @keydown.enter.prevent="open = !open"
-                @keydown.space.prevent="open = !open"
-                tabindex="0"
-                role="button"
-                :aria-expanded="open"
+                @click=" si = !si"
+                @click.outside="si = false"
+                :aria-expanded="si"
             >
                             <span class="text-xs font-medium text-gray-600 uppercase mb-1">
                     Speed Index
@@ -397,12 +374,13 @@
                                 {{ data.desktop.metrics.speed_index }}
                                 <span class="text-sm ml-1">s</span>
                             </span>
-
-                            <divS
-                    x-show="open"
+                            </button>
+                            <div
+                    x-show="si"
                     x-transition
                     x-cloak
                     class="mt-2 text-xs text-gray-600 text-center"
+                    @click.outside="si = false"
                 >
                     How quickly the contents of a page are visibly populated.
                 </div>
