--- a/_includes/dataCard/_a11y.njk
+++ b/_includes/dataCard/_a11y.njk
@@ -25,8 +25,8 @@
         description: "How quickly the contents of a page are visibly populated."
     }
 } %}
-    <section class="items-center flex flex-col">
-        <h2 class="">{{params.title}} {{metrics.speed_index.label}}
+    <section class="items-center flex flex-col bg-slate-400">
+        <h2 class="">{{params.title}} 
         </h2>
 
         {% for data in cardData %}
