add reports back in and update tailwind exclusion

--- a/_includes/dataCard/_template.njk
+++ b/_includes/dataCard/_template.njk
@@ -419,72 +419,6 @@
     </section>
 
 {% elif params.type === "a11y-lighthouse" %}
-
-    <section class="items-center flex flex-col">
-        <h2 class="">{{params.title}}
-        </h2>
-
-        {% for data in cardData %}
-            <div class="flex flex-col m-4 p-4 w-2/3 border border-solid border-primary-core-blue rounded-lg bg-light-gray">
-
-                <h2 class="text-2xl">{{data.page}}</h2>
-
-                <div class="flex">
-
-                    <div class="w-1/2">
-                        <h3 class="text-xl mb-1"> Automated Accessibility Reports from Google Lighthouse</h3>
-                        <p class="text-sm m-0">
-                            <em>for {{data.url}}
-                            </em>
-                        </p>
-                        <a class="border border-solid rounded-xl bg-primary-core-blue text-white p-3" href="/reports/{{data.mobilelink}}">Full Mobile Report <span class="sr-only">for {{data.page}}</span></a>
-                    </div>
-
-                    <div class="flex justify-center items-center px-8 py-4 m-4 border border-solid border-primary-core-blue rounded-xl bg-white">
-                        <p class="flex flex-col items-center text-center">
-                            <span class="font-bold text-xl">Mobile Score</span>
-                            <span 
-                                class="
-                                    text-4xl font-medium 
-                                    {% if data.mobile.performance_score >= 89 %} text-success-green {% endif %}
-                                    {% if data.mobile.performance_score >= 50 and data.mobile.performance_score <= 88 %} text-warning-orange {% endif %}
-                                    {% if data.mobile.performance_score >= 0 and data.mobile.performance_score <= 49 %} text-dark-red-alert {% endif %}
-                                    "
-                            >
-
-                                {{data.mobile.performance_score}}
-
-                                <span class="text-lg"> / 100 </span>
-
-                            </span>
-                        </p>
-                    </div>
-
-                    <div class="flex justify-center items-center px-8 py-4 m-4 border border-solid border-primary-core-blue rounded-xl bg-white">
-                        <p class="flex flex-col items-center">
-                            <span class="font-bold text-xl">Desktop Score</span>
-                            <span 
-                                class="
-                                    text-4xl font-medium 
-                                    {% if data.desktopscore >= 89 %} text-success-green {% endif %}
-                                    {% if data.desktopscore >= 50 and data.desktopscore <= 88 %} text-warning-orange {% endif %}
-                                    {% if data.desktopscore >= 0 and data.desktopscore <= 49 %} text-dark-red-alert {% endif %}
-                                    "
-                            >
-
-                                {{data.desktopscore}}
-
-                                <span class="text-lg"> / 100 </span>
-
-                            </span>
-                        </p>
-                    </div>
-
-                </div>
-            </div>
-
-        {% endfor %}
-
-    </section>
+{% include './_a11y.njk' %}
 
 {% endif %}
